# ai-collections-strategy-optimizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: audit.py  auth.py  config.py  engine.py  main.py  message_gen.py  models.py  safety.py  segmentation.py  store.py  strategy.py
app/data/: borrowers.json
tests/: conftest.py  test_api.py  test_bonus.py  test_safety.py  test_security_fixes.py  test_segmentation.py  test_strategy.py
